# gs2-cpp-sdk

./: CMakeLists.txt
src/gs2/: CMakeLists.txt  Gs2Sdk.cmake  gs2.mk
src/gs2/account/: CMakeLists.txt  Gs2Account.hpp  Gs2AccountClient.hpp  Gs2AccountConst.hpp  Gs2AccountRestClient.cpp  Gs2AccountRestClient.hpp  Gs2AccountWebSocketClient.cpp  Gs2AccountWebSocketClient.hpp
src/gs2/auth/: CMakeLists.txt  Gs2Auth.hpp  Gs2AuthClient.hpp  Gs2AuthConst.hpp  Gs2AuthRestClient.cpp  Gs2AuthRestClient.hpp  Gs2AuthWebSocketClient.cpp  Gs2AuthWebSocketClient.hpp
src/gs2/chat/: CMakeLists.txt  Gs2Chat.hpp  Gs2ChatClient.hpp  Gs2ChatConst.hpp  Gs2ChatRestClient.cpp  Gs2ChatRestClient.hpp  Gs2ChatWebSocketClient.cpp  Gs2ChatWebSocketClient.hpp
src/gs2/consumableItem/: Gs2ConsumableItem.hpp  Gs2ConsumableItemClient.hpp  Gs2ConsumableItemConst.hpp
src/gs2/core/: .gitignore  AbstractGs2Client.cpp  AbstractGs2Client.hpp  Android.mk  AsyncResult.hpp  CMakeLists.txt  Gs2Constant.cpp  Gs2Constant.hpp  Gs2Core.hpp  Gs2Object.hpp  Gs2_Core_AbstractGs2Client.cpp  Gs2_Core_Gs2Object.cpp  IAllocator.hpp  common.hpp  macros.hpp  types.hpp
src/gs2/datastore/: Gs2Datastore.hpp  Gs2DatastoreConst.hpp  Gs2DatastoreRestClient.hpp  Gs2DatastoreWebSocketClient.hpp
src/gs2/deploy/: CMakeLists.txt  Gs2Deploy.hpp  Gs2DeployConst.hpp  Gs2DeployRestClient.cpp  Gs2DeployRestClient.hpp  Gs2DeployWebSocketClient.cpp  Gs2DeployWebSocketClient.hpp
src/gs2/dictionary/: Gs2Dictionary.hpp  Gs2DictionaryConst.hpp  Gs2DictionaryRestClient.hpp  Gs2DictionaryWebSocketClient.hpp
src/gs2/distributor/: CMakeLists.txt  Gs2Distributor.hpp  Gs2DistributorClient.hpp  Gs2DistributorConst.hpp  Gs2DistributorRestClient.cpp  Gs2DistributorRestClient.hpp  Gs2DistributorWebSocketClient.cpp  Gs2DistributorWebSocketClient.hpp
src/gs2/enhance/: Gs2Enhance.hpp  Gs2EnhanceConst.hpp  Gs2EnhanceRestClient.hpp  Gs2EnhanceWebSocketClient.hpp
src/gs2/exchange/: CMakeLists.txt  Gs2Exchange.hpp  Gs2ExchangeConst.hpp  Gs2ExchangeRestClient.cpp  Gs2ExchangeRestClient.hpp  Gs2ExchangeWebSocketClient.cpp  Gs2ExchangeWebSocketClient.hpp
src/gs2/experience/: CMakeLists.txt  Gs2Experience.hpp  Gs2ExperienceClient.hpp  Gs2ExperienceConst.hpp  Gs2ExperienceRestClient.cpp  Gs2ExperienceRestClient.hpp  Gs2ExperienceWebSocketClient.cpp  Gs2ExperienceWebSocketClient.hpp
src/gs2/ez/: Authenticator.hpp  CMakeLists.txt  Client.hpp  EzStampSheet.cpp  EzStampSheet.hpp  EzStampTask.hpp  GameSession.hpp  Gs2AccountAuthenticator.cpp  Gs2AccountAuthenticator.hpp  Gs2BasicReopener.cpp  Gs2BasicReopener.hpp  Gs2Ez.hpp  Gs2_Ez_EzStampTask.cpp  Gs2_Ez_Gs2AccountAuthenticator.cpp  Gs2_Ez_Gs2BasicReopener.cpp  Profile.cpp  Profile.hpp  Reopener.hpp  StampSheetStateMachine.cpp  StampSheetStateMachine.hpp
src/gs2/formation/: Gs2Formation.hpp  Gs2FormationConst.hpp  Gs2FormationRestClient.hpp  Gs2FormationWebSocketClient.hpp
src/gs2/friend/: CMakeLists.txt  Gs2Friend.hpp  Gs2FriendConst.hpp  Gs2FriendRestClient.cpp  Gs2FriendRestClient.hpp  Gs2FriendWebSocketClient.cpp  Gs2FriendWebSocketClient.hpp
src/gs2/gacha/: Gs2Gacha.hpp  Gs2GachaClient.hpp  Gs2GachaConst.hpp
src/gs2/gateway/: CMakeLists.txt  Gs2Gateway.hpp  Gs2GatewayConst.hpp  Gs2GatewayRestClient.cpp  Gs2GatewayRestClient.hpp  Gs2GatewayWebSocketClient.cpp  Gs2GatewayWebSocketClient.hpp
src/gs2/gold/: Gs2Gold.hpp  Gs2GoldClient.hpp  Gs2GoldConst.hpp
src/gs2/identifier/: CMakeLists.txt  Gs2Identifier.hpp  Gs2IdentifierClient.hpp  Gs2IdentifierConst.hpp  Gs2IdentifierRestClient.cpp  Gs2IdentifierRestClient.hpp  Gs2IdentifierWebSocketClient.cpp  Gs2IdentifierWebSocketClient.hpp
src/gs2/inGamePushNotification/: CMakeLists.txt  Gs2InGamePushNotification.hpp  Gs2InGamePushNotificationClient.hpp  Gs2InGamePushNotificationConst.hpp  common.hpp  macros.hpp
src/gs2/inbox/: CMakeLists.txt  Gs2Inbox.hpp  Gs2InboxClient.hpp  Gs2InboxConst.hpp  Gs2InboxRestClient.cpp  Gs2InboxRestClient.hpp  Gs2InboxWebSocketClient.cpp  Gs2InboxWebSocketClient.hpp
src/gs2/inventory/: CMakeLists.txt  Gs2Inventory.hpp  Gs2InventoryClient.hpp  Gs2InventoryConst.hpp  Gs2InventoryRestClient.cpp  Gs2InventoryRestClient.hpp  Gs2InventoryWebSocketClient.cpp  Gs2InventoryWebSocketClient.hpp
src/gs2/jobQueue/: CMakeLists.txt  Gs2JobQueue.hpp  Gs2JobQueueClient.hpp  Gs2JobQueueConst.hpp  Gs2JobQueueRestClient.cpp  Gs2JobQueueRestClient.hpp  Gs2JobQueueWebSocketClient.cpp  Gs2JobQueueWebSocketClient.hpp
src/gs2/key/: CMakeLists.txt  Gs2Key.hpp  Gs2KeyClient.hpp  Gs2KeyConst.hpp  Gs2KeyRestClient.cpp  Gs2KeyRestClient.hpp  Gs2KeyWebSocketClient.cpp  Gs2KeyWebSocketClient.hpp
src/gs2/level/: Gs2Level.hpp  Gs2LevelClient.hpp  Gs2LevelConst.hpp
src/gs2/limit/: CMakeLists.txt  Gs2Limit.hpp  Gs2LimitClient.hpp  Gs2LimitConst.hpp  Gs2LimitRestClient.cpp  Gs2LimitRestClient.hpp  Gs2LimitWebSocketClient.cpp  Gs2LimitWebSocketClient.hpp
src/gs2/lock/: CMakeLists.txt  Gs2Lock.hpp  Gs2LockClient.hpp  Gs2LockConst.hpp  Gs2LockRestClient.cpp  Gs2LockRestClient.hpp  Gs2LockWebSocketClient.cpp  Gs2LockWebSocketClient.hpp
src/gs2/log/: CMakeLists.txt  Gs2Log.hpp  Gs2LogConst.hpp  Gs2LogRestClient.cpp  Gs2LogRestClient.hpp  Gs2LogWebSocketClient.cpp  Gs2LogWebSocketClient.hpp
src/gs2/lottery/: CMakeLists.txt  Gs2Lottery.hpp  Gs2LotteryClient.hpp  Gs2LotteryConst.hpp  Gs2LotteryRestClient.cpp  Gs2LotteryRestClient.hpp  Gs2LotteryWebSocketClient.cpp  Gs2LotteryWebSocketClient.hpp
src/gs2/matchmaking/: CMakeLists.txt  Gs2Matchmaking.hpp  Gs2MatchmakingClient.hpp  Gs2MatchmakingConst.hpp  Gs2MatchmakingRestClient.cpp  Gs2MatchmakingRestClient.hpp  Gs2MatchmakingWebSocketClient.cpp  Gs2MatchmakingWebSocketClient.hpp
src/gs2/mission/: CMakeLists.txt  Gs2Mission.hpp  Gs2MissionConst.hpp  Gs2MissionRestClient.cpp  Gs2MissionRestClient.hpp  Gs2MissionWebSocketClient.cpp  Gs2MissionWebSocketClient.hpp
src/gs2/money/: CMakeLists.txt  Gs2Money.hpp  Gs2MoneyClient.hpp  Gs2MoneyConst.hpp  Gs2MoneyRestClient.cpp  Gs2MoneyRestClient.hpp  Gs2MoneyWebSocketClient.cpp  Gs2MoneyWebSocketClient.hpp
src/gs2/news/: Gs2News.hpp  Gs2NewsConst.hpp  (+2 more)
(+5450 files in other folders)
